--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -44,6 +45,80 @@
                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
             </div>
         </div>
-    </div>         
+        <i class="fa-sharp fa-solid change-bg fa-angle-left fa-2x"></i>
+        <i class="fa-sharp fa-solid change-bg fa-angle-right fa-2x"></i>
+        <div class="dots">
+            <span></span>
+            <span class="active"></span>
+            <span></span>
+        </div>
+    </div>   
+    
+    <div class="services">
+        <div class="container">
+            <div class="special">
+                <h2>SERVICES</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            </div>
+            <div class="srv-cont">
+                <div class="srv">
+                    <i class="fa-sharp fa-solid fa-location-dot"></i>
+                    <div class="text">
+                        <h3>Vorem amet intuitive</h3>
+                        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+                    </div>
+                </div>
+
+                <div class="srv">
+                    <i class="fa-sharp fa-solid fa-wifi"></i>
+                    <div class="text">
+                        <h3>Vorem amet intuitive</h3>
+                        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+                    </div>
+                </div>
+
+                <div class="srv">
+                    <i class="fa-sharp fa-solid fa-thumbs-up"></i>
+                    <div class="text">
+                        <h3>Vorem amet intuitive</h3>
+                        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+                    </div>
+                </div>
+
+                <div class="srv">
+                    <i class="fa-sharp fa-solid fa-folder-open"></i>
+                    <div class="text">
+                        <h3>Vorem amet intuitive</h3>
+                        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="design">
+        <div class="text">
+            <div class="content">
+                <h2>
+                    OUR DESIGN COMES WITH...
+                </h2>
+                <ul>
+                    <li>Responsive Design</li>
+                    <li>Modern And Clean Design</li>
+                    <li>Clean Code</li>
+                    <li>Browser Friendly</li>
+                </ul>
+            </div>
+        </div>
+        <div class="photo">
+            <img src="/images/mobile.png" alt="">
+        </div>
+    </div>
+
+    <div class="portfolio">
+        <div class="container">
+            
+        </div>
+    </div>
 </body>
 </html>
