--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="photo">
-            <img src="./images/mobile.png" alt="Mobile">
+            <img src="../images/mobile.png" alt="">
         </div>
     </div>
 
