--- a/index.html
+++ b/index.html
@@ -117,8 +117,82 @@
 
     <div class="portfolio">
         <div class="container">
-            
+            <div class="special">
+                <h2>Portfolio</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            </div>
+            <div class="shuffle">
+                <ul>
+                    <li class="active_li">All</li>
+                    <li>App</li>
+                    <li>Photo</li>
+                    <li>Web</li>
+                    <li>Print</li>
+                </ul>
+            </div>
         </div>
+        <div class="img-cont">
+                <div class="box">
+                    <img src="./images/shuffle-01.jpg" alt="">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./images/shuffle-02.jpg" alt="">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./images/shuffle-03.jpg" alt="">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./images/shuffle-04.jpg" alt="">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./images/shuffle-05.jpg" alt="">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./images/shuffle-06.jpg" alt="">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./images/shuffle-07.jpg" alt="">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./images/shuffle-08.jpg" alt="">
+                    <div class="caption">
+                        <h4>Awesome Image</h4>
+                        <p>Photography</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="btn">
+                <a href="#">More</a>
+            </div>
     </div>
 </body>
 </html>
