--- a/index.html
+++ b/index.html
@@ -194,5 +194,54 @@
                 <a href="#">More</a>
             </div>
     </div>
+
+    <div class="video">
+        <video autoplay muted loop>
+            <source src="./images/awesome-video.mp4">
+        </video>
+        <div class="content">
+            <h3>SUPER AWESOME VIDEO HERE</h3>
+            <p>Its All You Need</p>
+            <button>See More</button>
+        </div>
+    </div>
+
+    <div class="about">
+        <div class="container">
+            <div class="special">
+                <h2>About Us</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            </div>
+            <div class="img">
+                <img src="./images/about.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="stats">
+        <div class="container">
+            <div class="box">
+                <i class="fa-sharp fa-solid fa-mug-hot"></i>
+                <h2>1.236</h2>
+                <p>Coffee Drinks</p>
+            </div>
+            <div class="box">
+                <i class="fa-sharp fa-solid fa-folder-open"></i>
+                <h2>256</h2>
+                <p>Completed Projects</p>
+            </div>
+            <div class="box">
+                <i class="fa-sharp fa-solid fa-dove"></i>
+                <h2>1,743</h2>
+                <p>Mail Sent</p>
+            </div>
+            <div class="box">
+                <i class="fa-sharp fa-solid fa-thumbs-up"></i>
+                <h2>17</h2>
+                <p>Awards Received</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
