--- a/index.html
+++ b/index.html
@@ -212,9 +212,8 @@
                 <h2>About Us</h2>
                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
             </div>
-            <div class="img">
+
                 <img src="./images/about.png" alt="">
-            </div>
         </div>
     </div>
 
@@ -222,7 +221,7 @@
         <div class="container">
             <div class="box">
                 <i class="fa-sharp fa-solid fa-mug-hot"></i>
-                <h2>1.236</h2>
+                <h2>1,236</h2>
                 <p>Coffee Drinks</p>
             </div>
             <div class="box">
@@ -239,6 +238,61 @@
                 <i class="fa-sharp fa-solid fa-thumbs-up"></i>
                 <h2>17</h2>
                 <p>Awards Received</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="skills">
+        <div class="container">
+            <div class="left">
+                <div class="head">
+                    <h2>TESTIMONIALS</h2>
+                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                </div>
+                <div class="content">
+                    <div>
+                        <img src="./images/skills-01.jpg" alt="">
+                        <div class="text">
+                            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                            <p>John Doe, CEO</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./images/skills-02.jpg" alt="">
+                        <div class="text">
+                            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                            <p>John Doe, CEO</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bullets">
+                    <span></span><span class="active"></span><span></span>
+                </div>
+            </div>
+
+            <div class="right">
+                <div class="head">
+                    <h2>Skills</h2>
+                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                </div>
+                <div class="content">
+                    <div class="box">
+                        <p>ADOBE</p>
+                        <div prog="90"></div>
+                    </div>
+                    <div class="box">
+                        <p prog="85">HTML & CSS</p>
+                        <div prog="85"></div>
+                    </div>
+                    <div class="box">
+                        <p prog="80">JAVASCRIPT</p>
+                        <div prog="80"></div>
+                    </div>
+                    <div class="box">
+                        <p>PHP</p>
+                        <div prog="90"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
